@@ -2,6 +2,11 @@
 Top of SVN tree:
 ------------------------------------------------------------------------------
 
+gtk-v2/src/keys.c: Fix for [ 1875657 ] Bogus keybinding too long errors. Made
+  more truncation messages consistent, and fixed an inconsistently formatted
+  LOG message. Fixed case and shortened message when keybinds are saved.
+Kevin Bulgrien 2008-01-20
+
 Per-character keybind support.
 gtk-v2/src/keys.c: In save_keys() and keys_init(), a pointless #ifdef WIN32
   was used to attempt to implement per-character keybind files but keys_init()
